# pokemon-tcg-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  docker-compose.yml  liquibase.properties.example  pyproject.toml  test_sprites.py
app/: bot.py
app/cogs/: connect4.py  pkmncards.py
app/data/: pokemon_hashes.csv
bot/: config.py  database.py  start_bot.py
bot/agent/: global_interaction.py  llm_agent.py
bot/agent/tools/: generic_conversation.py  pokemon_tcg.py  post_images.py  post_pokemon_box.py
bot/api/: poketcg.py
bot/cogs/: agent.py  connect4.py  pkmncards.py  poke2spy.py  pokebox.py  pokemontcg.py  poketcg.py  tetris.py  wordle.py
bot/utils/: confirm_msg.py
cogs/: __init__.py  connect4.py  pkmncards.py  tetris.py
data/: pokemon_hashes.csv
docker/pokemon-tcg-bot/: Dockerfile
docker/postgres-init/: Dockerfile
docker/postgres-init/artifacts/: db.changelog-master.sql  player_db_init.sh
liquibase/: liquibase.properties.example
liquibase/changelog/: db.changelog-master.yaml
tools/: build_images.sh
