[tool.poetry]
name = "pokemon-tcg-bot"
version = "1.0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">3.11,<3.12"
bs4 = "0.0.2"
pandas = "2.2.2"
numpy = "1.25.2"
pillow = "10.4.0"
discord-py = "2.4.0"
reactionmenu = "3.1.7"
python-dotenv = "1.0.1"
SQLAlchemy = "2.0.35"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.5.2"
cachetools = "5.5.0"
opencv-python-headless = "4.10.0.84"
pydash = "^8.0.4"
langchain = "^0.3.12"
openai = "^1.58.1"
langchainhub = "^0.1.21"
langchain-openai = "^0.2.12"
pydantic = "^2.10.3"
rapidfuzz = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"